WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
257988
Fix :user-invalid/:user-valid interactions with form reset & submission
https://bugs.webkit.org/show_bug.cgi?id=257988
Summary
Fix :user-invalid/:user-valid interactions with form reset & submission
Simon Welsh
Reported
2023-06-12 16:47:57 PDT
Created
attachment 466672
[details]
Example.html When submitting a form that has required inputs, :user-invalid is not triggered for these required inputs. In the attached example, I'd expect all inputs to have a red border when submitting the form without providing any values.
Attachments
Example.html
(418 bytes, text/html)
2023-06-12 16:47 PDT
,
Simon Welsh
no flags
Details
View All
Add attachment
proposed patch, testcase, etc.
Radar WebKit Bug Importer
Comment 1
2023-06-12 18:03:38 PDT
<
rdar://problem/110677832
>
Tim Nguyen (:ntim)
Comment 2
2023-08-07 20:55:34 PDT
***
Bug 257989
has been marked as a duplicate of this bug. ***
Tim Nguyen (:ntim)
Comment 3
2023-08-07 21:49:32 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/16465
Tim Nguyen (:ntim)
Comment 4
2023-08-07 21:51:15 PDT
Submitted web-platform-tests pull request:
https://github.com/web-platform-tests/wpt/pull/41378
EWS
Comment 5
2023-08-08 15:15:18 PDT
Committed
266702@main
(b148a49fc1bd): <
https://commits.webkit.org/266702@main
> Reviewed commits have been landed. Closing PR #16465 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug